dataset1235/2025-2/1153765216/users/3635356750/executions/2747719322_3691284457.log
== SUBMISSION (2025-08-21 17:59:06)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_  round(arredondada = ponderada, 2)

print(media_arredondada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:14:31)
-- CODE: 
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
media_ponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/10
media_arrendondada=round(media_ponderada, 2)
print(media_arrendondada)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:00:22)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_arredondada = round(media_ponderada, 2)

print(media_arredondada)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:58:53)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_  round(arredondada = ponderada,2)

print(media_arredondada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:58:54)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_  round(arredondada = ponderada,2)

print(media_arredondada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:59:20)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_round(arredondada = ponderada, 2)

print(media_arredondada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_round(arredondada = ponderada, 2)
                                          ^
SyntaxError: positional argument follows keyword argument
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:58:29)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_  round(arredondada = ponderada,2)
print(media_ponderada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada,2)
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:59:05)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_  round(arredondada = ponderada, 2)

print(media_arredondada)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_  round(arredondada = ponderada, 2)
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:57:36)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media_ponderada = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/10
media_ arredondada = ponderada,2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    media_ arredondada = ponderada,2
           ^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
